<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:gravity="end|bottom"
        android:padding="14dp"
        android:textSize="40sp"
        android:background="@color/black"
        android:text="@string/zero"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/seven"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/eight"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/nine"/>
        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/divide"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/four"/>
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/five"/>
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/six"/>
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/multiply"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/one"/>
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/two"/>
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/three"/>
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/minus"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/zero"/>
        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/dot"/>
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/plus"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/equals"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:textSize="30sp"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:text="@string/equal_to"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/author"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>